[GEOS-11947] Add the ability to skip numberMatched in STAC/OpenSearch for EO responses