@@ -112,7 +112,7 @@ public class SearchTest extends STACTestSupport {
                 "ogc/stac/v1/search?collections=SENTINEL2,LANDSAT8"
                         + "&filter=constellation='landsat8'&filter-lang=cql2-text",
                 200);
-        assertEquals(new Integer(2), doc.read("numberMatched", Integer.class));
+        assertEquals(Integer.valueOf(2), doc.read("numberMatched", Integer.class));
     }
 
     @Test
@@ -328,11 +328,21 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksFirstSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksFirst(null);
+    }
+
+    @Test
     public void testPagingLinksFirst() throws Exception {
+        checkPagingLinksFirst(4);
+    }
+
+    private void checkPagingLinksFirst(Integer expectedNumberMatched) throws Exception {
         String requestPath = "ogc/stac/v1/search?collections=SAS1%2CLANDSAT8"
                 + "&filter=eo%3Acloud_cover%3D0&filter-lang=cql-text&limit=1";
         DocumentContext doc = getAsJSONPath(requestPath, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, self and next
@@ -352,11 +362,21 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksSecondSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksSecond(null);
+    }
+
+    @Test
     public void testPagingLinksSecond() throws Exception {
+        checkPagingLinksSecond(4);
+    }
+
+    private void checkPagingLinksSecond(Integer expectedNumberMatched) throws Exception {
         String requestPath = "ogc/stac/v1/search?collections=SAS1%2CLANDSAT8"
                 + "&filter=eo%3Acloud_cover%3D0&filter-lang=cql-text&limit=1&startIndex=1";
         DocumentContext doc = getAsJSONPath(requestPath, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // three links expected, prev, self and next
@@ -383,11 +403,21 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksLastSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksLast(null);
+    }
+
+    @Test
     public void testPagingLinksLast() throws Exception {
+        checkPagingLinksPostSecond(4);
+    }
+
+    private void checkPagingLinksLast(Integer expectedNumberMatched) throws Exception {
         String requestPath = "ogc/stac/v1/search?collections=SAS1%2CLANDSAT8"
                 + "&filter=eo%3Acloud_cover%3D0&filter-lang=cql-text&limit=1&startIndex=2";
         DocumentContext doc = getAsJSONPath(requestPath, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, prev, self
@@ -407,7 +437,17 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksPostFirstSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksPostFirst(null);
+    }
+
+    @Test
     public void testPagingLinksPostFirst() throws Exception {
+        checkPagingLinksPostFirst(4);
+    }
+
+    private void checkPagingLinksPostFirst(Integer expectedNumberMatched) throws Exception {
         String request = "{\n"
                 + "  \"collections\": [\n"
                 + "    \"SAS1\",\n"
@@ -418,7 +458,7 @@ public class SearchTest extends STACTestSupport {
                 + "  \"limit\": 1\n"
                 + "}";
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, self and next
@@ -441,7 +481,17 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksPostSecondSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksPostSecond(null);
+    }
+
+    @Test
     public void testPagingLinksPostSecond() throws Exception {
+        checkPagingLinksPostSecond(4);
+    }
+
+    private void checkPagingLinksPostSecond(Integer expectedNumberMatched) throws Exception {
         String request = "{\n"
                 + "  \"collections\": [\n"
                 + "    \"SAS1\",\n"
@@ -453,7 +503,7 @@ public class SearchTest extends STACTestSupport {
                 + "  \"startIndex\": 1\n"
                 + "}";
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // three links expected, prev, self and next
@@ -484,8 +534,18 @@ public class SearchTest extends STACTestSupport {
     }
 
     @Test
+    public void testPagingLinksPostLastSkipMatched() throws Exception {
+        enableSkipNumberMatched();
+        checkPagingLinksPostLast(null);
+    }
+
+    @Test
     public void testPagingLinksPostLast() throws Exception {
-        String request = "{\n"
+        checkPagingLinksPostLast(4);
+    }
+
+    private void checkPagingLinksPostLast(Integer expectedNumberMatched) throws Exception {
+                String request = "{\n"
                 + "  \"collections\": [\n"
                 + "    \"SAS1\",\n"
                 + "    \"LANDSAT8\"\n"
@@ -496,7 +556,7 @@ public class SearchTest extends STACTestSupport {
                 + "  \"startIndex\": 2\n"
                 + "}";
         DocumentContext doc = postAsJSONPath("ogc/stac/v1/search", request, 200);
-        assertEquals(Integer.valueOf(4), doc.read("numberMatched"));
+        assertEquals(expectedNumberMatched, doc.read("numberMatched"));
         assertEquals(Integer.valueOf(1), doc.read("numberReturned"));
 
         // two links expected, prev, self
